# clouni_provider_tool

./: .gitignore  Dockerfile  MANIFEST.in  README.md  hosts.ini  requirements.txt  setup.cfg  setup.py  test.yaml
.github/ISSUE_TEMPLATE/: issue.md
.github/workflows/: add-to-pip.yml  python-app.yml  testing-app.yml
examples/: tosca-server-example-amazon.yaml  tosca-server-example-kubernetes.yaml  tosca-server-example-openstack.yaml  tosca-server-example-scalable.yaml
grpc_client/: clouni_client.py
grpc_server/: api.proto  api_pb2.py  api_pb2_grpc.py  clouni_provider_tool.py
provider_tool/: clouni.cfg
provider_tool/ansible_runner/: runner.py
provider_tool/common/: TOSCA_definition_1_0.yaml  configuration.py  tosca_reserved_keys.py  translator_to_configuration_dsl.py  utils.py
provider_tool/runner/: cotea_pb2_grpc.py  runner.py
testing/: base.py  test_amazon.py  test_kubernetes.py  test_openstack.py  test_utils.py
testing/examples/: test_endpoint_capabilities_amazon.yaml  test_endpoint_capabilities_openstack.yaml  test_get_attribute_amazon.yaml  test_get_attribute_openstack.yaml  test_get_property_amazon.yaml  test_get_property_openstack.yaml  test_host_capabilities_amazon.yaml  test_host_capabilities_openstack.yaml  test_host_ip_parameter_openstack.yaml  test_host_of_software_component_amazon.yaml  test_host_of_software_component_openstack.yaml  test_meta_amazon.yaml  test_meta_openstack.yaml  test_multiple_relationships_openstack.yaml  test_network_name_amazon.yaml  test_network_name_openstack.yaml  test_nodes_interfaces_operations_amazon.yaml  test_nodes_interfaces_operations_openstack.yaml  test_os_capabilities_amazon.yaml  test_os_capabilities_openstack.yaml  test_private_address_amazon.yaml  test_private_address_openstack.yaml  test_public_address_openstack.yaml  (+6 more)
(+17 files in other folders)
