[metadata]
name = clouni_provider_tool
version = 0.0.1
summary = Cloud Application Management Tool by TOSCA.
description-file = README.md
author = bura2017
author-email = shvetcova@ispras.ru
classifier =
    Environment :: ISP RAS
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    provider_tool
    grpc_server
    grpc_client

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    clouni-provider-tool = grpc_server.clouni_provider_tool:serve
    clouni-client = grpc_client.clouni_client:main
