[metadata]
name = clouni-provider-tool
version = 0.1.4
summary = Cloud Application Management Tool by TOSCA.
long_description = file: README.md
long_description_content_type = text/markdown
author = bura2017
author-email = shvetcova@ispras.ru
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    provider_tool
    grpc_server

[options]
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    clouni-provider-tool = grpc_server.clouni_provider_tool:serve
